--- a/project-service/pom.xml
+++ b/project-service/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.bgp</groupId>
     <artifactId>project-management</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <relativePath>..</relativePath>
 	</parent>
 	
     <properties>
@@ -22,6 +23,11 @@
     </properties>
 
     <dependencies>
+    	<dependency>
+    		<groupId>com.bgp</groupId>
+    		<artifactId>project-common</artifactId>
+    		 <version>0.0.1-SNAPSHOT</version>
+    	</dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
