--- a/project-service/src/main/resources/application-dev.yml
+++ b/project-service/src/main/resources/application-dev.yml
@@ -21,3 +21,6 @@ spring:
     suffix: .html
 server:
   port: 8081
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
