--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
                 </executions>
                 <configuration>
                     <dockerHost>http://localhost:2375</dockerHost>
-                    <imageName>javaboy/${project.artifactId}</imageName>
+                    <imageName>dangkei/${project.artifactId}</imageName>
                     <imageTags>
                         <imageTag>${project.version}</imageTag>
                     </imageTags>
@@ -106,11 +106,21 @@
 		</pluginRepository>
 	</pluginRepositories>
   
-  
     <dependencies>
     	<dependency>
     		<groupId>junit</groupId>
     		<artifactId>junit</artifactId>
-    		</dependency>
+    	</dependency>
+    	        <!-- lombok 简化set get toString -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <!-- mybatis-plus -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.4.3.1</version>
+        </dependency>
     </dependencies>
 </project>
