--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,18 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.4.3.1</version>
-        </dependency>
+        </dependency>        
+        <!--代码生成器-->
+		<dependency>
+		    <groupId>com.baomidou</groupId>
+		    <artifactId>mybatis-plus-generator</artifactId>
+		    <version>3.4.1</version>
+		</dependency>
+		<!--velocity模板引擎-->
+		<dependency>
+		    <groupId>org.apache.velocity</groupId>
+		    <artifactId>velocity-engine-core</artifactId>
+		    <version>2.3</version>
+		</dependency>
     </dependencies>
 </project>
